--- a/src/app/features/menu/pages/menu/menu.page.html
+++ b/src/app/features/menu/pages/menu/menu.page.html
@@ -1,2 +1,20 @@
 <app-header [itemBack]="header"></app-header>
-<ion-content> </ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <h1 class="title-menu">Tipo de almac&eacute;n</h1>
+      </ion-col>
+      <ion-col size="12">
+        <h1 class="subtitle-menu">Seleccione el tipo almac&eacute;n</h1>
+      </ion-col>
+    </ion-row>
+    <ion-row class="container-button">
+      <ng-container *ngFor="let option of options">
+        <ion-col size="6" class="button">
+          <app-button-menu [labelButton]="option"></app-button-menu>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+  </ion-grid>
+</ion-content>
