--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -12,7 +12,7 @@
         <ion-row>
           <ion-col size="12"><label> Almac&eacute;n</label></ion-col>
           <ion-col size="12"
-            ><label> {{ itemBack.title || 'Seccion'}}</label></ion-col
+            ><label> {{ title || "Seccion" }}</label></ion-col
           >
         </ion-row>
       </ion-grid>
