--- a/src/app/features/dried/pages/open-lot/open-lot.page.html
+++ b/src/app/features/dried/pages/open-lot/open-lot.page.html
@@ -1,3 +1,26 @@
-<p>
-  open-lot works!
-</p>
+<app-header [itemBack]="header"></app-header>
+
+<ion-content class="container">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <h1 class="title-menu">Abrir lote</h1>
+      </ion-col>
+    </ion-row>
+    <ion-row size="12">
+      <open-lot-form #form (onSubmit)="onSubmit($event)"></open-lot-form>
+    </ion-row>
+  </ion-grid>
+  <div class="ion-justify-content-center btn">
+    <ion-button
+      expand="block"
+      color="primary"
+      style="text-transform: none;"
+      size="large"
+      (click)="form.onSubmit()"
+      [disabled]="form.form.invalid"
+    >
+      Abrir lote
+    </ion-button>
+  </div>
+</ion-content>
