--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,9 @@ $color-primary: #e2bd53;
 $color-secundary: #707070;
 $color-text-primary: #e2bd53;
 $color-text-secondary: #dbdbdb;
+
+.modal-size {
+  border-radius: 5px;
+  --width: 100%;
+  --height: 180px;
+}
