--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,12 +83,12 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary: #e2bd53;
+    --ion-color-primary-rgb: 226, 189, 83;
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-contrast-rgb: 0, 0, 0;
+    --ion-color-primary-shade: #c7a649;
+    --ion-color-primary-tint: #e5c464;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80, 200, 255;
@@ -229,5 +229,9 @@
 
   ion-title.title-large {
     --color: white;
+  }
+
+  ion-button.ion-color.ion-color-primary {
+    text-transform: none;
   }
 }
