--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
@@ -1,18 +1,18 @@
-<app-header (back)="onBack($event)"[itemBack]="header"></app-header>
+<app-header  [itemBack]="header"></app-header>
 <div class="submenu-container">
   <h1 class="header-container">Menu</h1>
   <ion-segment
     [(ngModel)]="section"
-    (ionChange)="steppertag.next(section!== undefined)"
+    (ionChange)="steppertag.next(0,section!== undefined)"
     class="body-container"
   >
     <ion-grid>
       <ion-row>
         <ion-col size="6">
-          <ion-segment-button value="open-lote"> Abrir Lote</ion-segment-button>
+          <ion-segment-button value="open-lot"> Abrir Lote</ion-segment-button>
         </ion-col>
         <ion-col size="6">
-          <ion-segment-button value="close-lote">
+          <ion-segment-button value="close-lot">
             Cerrar Lote</ion-segment-button
           >
         </ion-col>
