--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
@@ -8,22 +8,24 @@ $color-text-secondary: #717171;
   .header-container {
     color: $color-text-primary;
     font-weight: 700;
-    font-size: 6vw;
+    font-size: 5vw;
     margin-top: 5%;
     margin-left: 5%;
-    margin-bottom: 10%;
+    margin-bottom: 7%;
   }
   .body-container {
     width: 100%;
     height: 50%;
     padding: 0 10%;
     background-color: white;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
+    box-sizing: border-box;
     ion-grid {
       ion-row {
         height: 50%;
         ion-col {
           padding: 2% 6%;
+          box-sizing: border-box;
           ion-segment-button {
             height: 100%;
             width: 100%;
