--- a/src/app/features/dried/pages/close-lot/close-lot.page.html
+++ b/src/app/features/dried/pages/close-lot/close-lot.page.html
@@ -1,3 +1,36 @@
-<p>
-  close-lot works!
-</p>
+<app-header [itemBack]="header"></app-header>
+
+<ion-content class="container">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <h1 class="title-menu">Cerrar lote</h1>
+      </ion-col>
+    </ion-row>
+    <ion-row size="12">
+      <close-lot-form #form (onSubmit)="onSubmit($event)"></close-lot-form>
+    </ion-row>
+  </ion-grid>
+  <div class="ion-justify-content-center">
+    <ion-col>
+      <ion-row size="12">
+        <div class="linea"></div>
+        <div class="linea"></div>
+      </ion-row>
+      <ion-row class="ion-justify-content-center btn">
+        <div class="ion-justify-content-center btn">
+          <ion-button
+            expand="block"
+            color="primary"
+            style="text-transform: none;"
+            size="large"
+            (click)="form.onSubmit()"
+            [disabled]="form.form.invalid"
+          >
+            Cerrar lote
+          </ion-button>
+        </div>
+      </ion-row>
+    </ion-col>
+  </div>
+</ion-content>
