--- a/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
+++ b/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
@@ -4,7 +4,7 @@
       <ion-label>¡Confirmacion!</ion-label>
     </div>
     <div class="ion-text-center">
-      <ion-label class="label">Está a punto de abrir un lote.</ion-label>
+      <ion-label class="label">Está a punto de {{ action }} un lote.</ion-label>
     </div>
 
     <div class="ion-text-center buttons">
