Letras en blanco en las opciones del submenu empaques

--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
@@ -28,6 +28,7 @@ $color-text-secondary: #717171;
             height: 100%;
             width: 100%;
             background-color: $color-text-secondary;
+            color: white;
             border-radius: 8px;
             font-size: 3.5vw;
             font-weight: 500;
