cambio logo impresion de reportes

--- a/src/app/features/dried/layout/layout.component.html
+++ b/src/app/features/dried/layout/layout.component.html
@@ -15,7 +15,7 @@
     </ion-row>
   </ion-grid>
   <div class="ion-justify-content-center center">
-    <ion-button expand="block">
+    <ion-button expand="block" routerLink="/dried/print-report">
       <ion-label class="label-button">Siguiente</ion-label>
       <ion-icon
         lot="end"
