--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.html
@@ -1,4 +1,4 @@
-<app-header  [itemBack]="header"></app-header>
+<app-header [itemBack]="header"></app-header>
 <div class="submenu-container">
   <h1 class="header-container">Menu</h1>
   <ion-segment
@@ -19,7 +19,7 @@
       </ion-row>
       <ion-row>
         <ion-col size="12" class="segment-odd">
-          <ion-segment-button value="exit"> Salida</ion-segment-button>
+          <ion-segment-button value="exit-lot"> Salida</ion-segment-button>
         </ion-col>
       </ion-row>
     </ion-grid>
