--- a/src/app/features/landing/pages/login/login.page.scss
+++ b/src/app/features/landing/pages/login/login.page.scss
@@ -82,7 +82,8 @@ $color-text-secondary: #dbdbdb;
         .error {
           margin-top: 2%;
           color: tomato;
-          font-size: 1.7vw;
+          text-align: center;
+          font-size: 0.9em;
           height: 2%;
           transform: 2s;
         }
