--- a/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
+++ b/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
@@ -10,7 +10,9 @@
     <div class="ion-text-center buttons">
       <ion-label (click)="cancel()"> Cancelar</ion-label>
 
-      <ion-button class="btn" color="primary" size="short">Aceptar</ion-button>
+      <ion-button class="btn" color="primary" size="short" (click)="save()"
+        >Aceptar</ion-button
+      >
     </div>
   </div>
 </ion-content>
