--- a/src/app/features/dried/pages/open-lot/open-lot.page.html
+++ b/src/app/features/dried/pages/open-lot/open-lot.page.html
@@ -8,7 +8,11 @@
       </ion-col>
     </ion-row>
     <ion-row size="12">
-      <open-lot-form #form (onSubmit)="onSubmit($event)"></open-lot-form>
+      <open-lot-form
+        #form
+        (onSubmit)="onSubmit($event)"
+        [products]="products$ | async"
+      ></open-lot-form>
     </ion-row>
   </ion-grid>
   <div class="ion-justify-content-center">
