--- a/src/app/features/dried/layout/layout.component.scss
+++ b/src/app/features/dried/layout/layout.component.scss
@@ -21,7 +21,8 @@ ion-grid {
     height: 47vh;
     width: 100%;
     .button {
-      padding: 7%;
+      margin: 2px 3%;
+      padding: 3%;
     }
   }
 }
