--- a/src/app/features/dried/pages/close-lot/close-lot.page.html
+++ b/src/app/features/dried/pages/close-lot/close-lot.page.html
@@ -12,6 +12,7 @@
         #form
         (onSubmit)="onSubmit($event)"
         [products]="products$ | async"
+        [lots]="lots$|async"
       ></close-lot-form>
     </ion-row>
   </ion-grid>
