--- a/src/app/features/dried/pages/open-lot/open-lot.page.html
+++ b/src/app/features/dried/pages/open-lot/open-lot.page.html
@@ -12,6 +12,7 @@
         #form
         (onSubmit)="onSubmit($event)"
         [products]="products$ | async"
+        [lots]="lots$ | async"
       ></open-lot-form>
     </ion-row>
   </ion-grid>
