--- a/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
+++ b/src/app/features/packaging/pages/packaging-menu/packaging-menu.page.scss
@@ -1,72 +1,48 @@
 $color-text-primary: #575552;
-$color-text-secondary: #717171;
+$color-text-secondary: #b2b2b2;
+$color-primary: #e2bd53;
 
-.submenu-container {
-  width: 100vw;
-  height: 100%;
-  background-color: white;
-  .header-container {
+ion-grid {
+  .title-menu {
     color: $color-text-primary;
-    font-weight: 700;
-    font-size: 5vw;
+    font-size: 4vw;
     margin-top: 5%;
+    font-weight: 700;
     margin-left: 5%;
-    margin-bottom: 7%;
   }
-  .body-container {
+  .subtitle-menu {
+    color: $color-text-secondary;
+    margin-top: 4%;
+    font-size: 3.4vw;
+    margin-left: 5%;
+    margin-bottom: 15%;
+  }
+  .container-button {
+    height: 47vh;
     width: 100%;
-    height: 50%;
-    padding: 0 10%;
-    background-color: white;
-    margin-bottom: 10%;
-    box-sizing: border-box;
-    ion-grid {
-      ion-row {
-        height: 50%;
-        ion-col {
-          padding: 2% 6%;
-          box-sizing: border-box;
-          ion-segment-button {
-            height: 100%;
-            width: 100%;
-            background-color: $color-text-secondary;
-            color: white;
-            border-radius: 8px;
-            font-size: 3.5vw;
-            font-weight: 500;
-            --indicator-color: transparent;
-            text-transform: none;
-          }
-        }
-        .segment-odd {
-          padding: 4% 6.5%;
-        }
-      }
-    }
-  }
-  .footer-container {
-    height: 30%;
-    ion-row {
-      height: 75%;
-    }
-    .row-stepper {
-      height: 25%;
-    }
-    .row-button {
-      padding: 0 30%;
-      .next-button {
-        --ion-color-primary: #e2bd53;
-        --padding-top: 3%;
-        width: 100%;
-        height: 35%;
-        margin-top: 10%;
-        font-size: 3vw;
-      }
+    .button {
+      margin: 2px 3%;
+      padding: 3%;
     }
   }
 }
+ion-button {
+  // height: 10%;
+  width: 80%;
+  text-transform: none;
+  font-size: 3vw;
+  font-weight: 20;
+  margin: 0;
+  margin-top: 18%;
+  border-radius: 5px;
+  --ion-color-primary: #e2bd53;
+}
 
-.segment-button-checked {
-  background-color: $color-text-primary !important;
-  color: white;
+.center {
+  display: flex;
+}
+
+.label-button {
+  font-size: 4vw;
+  font-weight: 100 !important;
 }
