configuracion de seleccion de productos de lotes

--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -34,7 +34,7 @@
         >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">
-              {{ lot.name }}
+              {{ lot.loteId }}
             </ion-select-option>
           </ng-container>
         </ion-select>
