--- a/src/app/features/packaging/pages/open-lot/open-lot.page.html
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.html
@@ -15,7 +15,7 @@
         >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot.loteId">
-              {{lot.name}}</ion-select-option
+              {{lot.loteId}}</ion-select-option
             >
           </ng-container>
         </ion-select>
