--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
@@ -11,7 +11,7 @@
         >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">
-              {{ lot.name }}
+              {{ lot.loteId }}
             </ion-select-option>
           </ng-container>
         </ion-select>
