--- a/src/app/features/packaging/pages/open-lot/open-lot.page.html
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.html
@@ -14,9 +14,7 @@
           [disabled]="loading"
         >
           <ng-container *ngFor="let lot of lots">
-            <ion-select-option [value]="lot.loteId">
-              {{lot.loteId}}</ion-select-option
-            >
+            <ion-select-option [value]="lot"> {{lot.loteId}}</ion-select-option>
           </ng-container>
         </ion-select>
       </ion-item>
@@ -34,10 +32,10 @@
           interface="action-sheet"
           placeholder="Seleccione un producto"
           formControlName="product"
-          [disabled]="products.length=== 0"
+          [disabled]="serie.value==''"
         >
-          <ng-container *ngFor="let product of products">
-            <ion-select-option [value]="product"
+          <ng-container *ngFor="let product of serie.value.products">
+            <ion-select-option [value]="product.id"
               >{{product.description}}</ion-select-option
             >
           </ng-container>
