fix exit lot and remove stepper of close lot, exit lot, open lot

--- a/src/app/features/packaging/pages/close-lot/close-lot.page.html
+++ b/src/app/features/packaging/pages/close-lot/close-lot.page.html
@@ -67,15 +67,13 @@
   </form>
   <ion-grid class="footer-container">
     <ion-row class="row-stepper">
-      <ion-col size="12">
-        <packaging-stepper class="steppers" #steppertag></packaging-stepper>
-      </ion-col>
+      <ion-col size="12"> </ion-col>
     </ion-row>
     <ion-row class="row-button">
       <ion-button
         class="button"
         (click)="requestCloseLot()"
-        [disabled]="!steppertag.getStep(1)"
+        [disabled]="lotForm.invalid"
       >
         <ion-grid>
           <ion-col *ngIf="!loading" size="12">Cerrar lote</ion-col>
