fix - seleccion de lote por id y filtrado de productos para segundo selector en formularios de abrir y cerrar, formato de fecha, conversion de productId a numerico, status en las peticiones al solicitar lotes y enviar status de formularios

--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
@@ -29,9 +29,10 @@
         <ion-select
           placeholder="Seleccione un producto"
           formControlName="productId"
+          (ionChange)="changeProduct($event)"
         >
           <ng-container *ngFor="let product of filterProducts">
-            <ion-select-option [value]="product.loteId">
+            <ion-select-option [value]="product.id">
               {{ product.description }}
             </ion-select-option>
           </ng-container>
