--- a/src/app/features/menu/pages/menu/menu.page.html
+++ b/src/app/features/menu/pages/menu/menu.page.html
@@ -1,4 +1,4 @@
-<app-header [itemBack]="header"></app-header>
+<app-header [itemBack]="header" (click)="logout()"></app-header>
 <ion-content>
   <ion-grid>
     <ion-row>
