fix - color amarillo en modal de confirmacion a los formularios

--- a/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
+++ b/src/app/features/dried/dialogs/message-dialog/message-dialog.component.html
@@ -10,7 +10,11 @@
     <div class="ion-text-center buttons">
       <ion-label (click)="cancel()"> Cancelar</ion-label>
 
-      <ion-button class="btn" color="primary" size="short" (click)="save()"
+      <ion-button
+        class="btn"
+        style="--background: #e1bc5c;"
+        size="short"
+        (click)="save()"
         >Aceptar</ion-button
       >
     </div>
