fix - validacion de formulario para login

--- a/src/app/features/landing/pages/login/login.page.html
+++ b/src/app/features/landing/pages/login/login.page.html
@@ -32,8 +32,14 @@
             </ion-item>
           </ion-row>
           <div class="error">
-            <ion-label *ngIf="email.errors">
-              Por favor ingresa un correo electr&oacute;nico valido
+            <ion-label *ngIf="email.invalid && (email.dirty || email.touched)">
+              Dato inválido
+            </ion-label>
+            <ion-label *ngIf="loginForm.get('email').hasError('email')">
+              Ingrese un correo electrónico
+            </ion-label>
+            <ion-label *ngIf="email.touched && email.errors?.whitespace">
+              No se aceptan espacios en blanco
             </ion-label>
           </div>
           <ion-row>
@@ -49,8 +55,13 @@
             </ion-item>
           </ion-row>
           <div class="error">
-            <ion-label *ngIf="password.errors">
-              Por favor ingresa una contraseña válida
+            <ion-label
+              *ngIf="password.invalid && (password.dirty || password.touched)"
+            >
+              Dato inválido.
+            </ion-label>
+            <ion-label *ngIf="password.touched && password.whitespace">
+              No se aceptan espacios en blanco
             </ion-label>
           </div>
           <ion-button
