--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
@@ -4,7 +4,12 @@
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Lote*</ion-label>
 
-        <ion-select placeholder="Ingresa lote" (ionChange)="change($event)">
+        <ion-select
+          placeholder="Ingresa lote"
+          formControlName="loteId"
+          (ionBlur)="change()"
+          [disabled]="disabled(lots)"
+        >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">
               {{ lot.loteId }}
@@ -14,7 +19,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="form.hasError('required', 'loteId')">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'loteId') &&
+          (form.controls.loteId.touched || form.controls.loteId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
@@ -24,7 +34,8 @@
 
         <ion-select
           placeholder="Seleccione un producto"
-          (ionChange)="changeProduct($event)"
+          formControlName="productId"
+          [disabled]="disabled(filterProducts)"
         >
           <ng-container *ngFor="let product of filterProducts">
             <ion-select-option [value]="product.id">
@@ -35,7 +46,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="form.hasError('required', 'productId')">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'productId') &&
+          (form.controls.productId.touched || form.controls.productId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
