--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -8,10 +8,11 @@
         <ion-select
           placeholder="Seleccione lote*"
           formControlName="loteId"
-          (ionChange)="change($event)"
+          (ionBlur)="change()"
+          [disabled]="disabled(lots)"
         >
           <ng-container *ngFor="let lot of lots">
-            <ion-select-option [value]="lot.loteId">
+            <ion-select-option [value]="lot">
               {{ lot.loteId }}
             </ion-select-option>
           </ng-container>
@@ -19,7 +20,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="form.hasError('required', 'productId')">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'loteId') &&
+          (form.controls.loteId.touched || form.controls.loteId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
@@ -31,7 +37,7 @@
         <ion-select
           placeholder="Seleccione un producto*"
           formControlName="productId"
-          [disabled]="!filterProducts.length"
+          [disabled]="disabled(filterProducts)"
         >
           <ng-container *ngFor="let product of filterProducts">
             <ion-select-option [value]="product.loteId">
@@ -42,7 +48,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="form.hasError('required', 'loteId')">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'productId') &&
+          (form.controls.productId.touched || form.controls.productId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
